SessionObserver -> public class, lil updates